# pipecat-vonage-video-api-bot-demo-JP

./: .env.example  .gitignore  README-JP.md  README.md  bot.py  pyproject.toml  server.py  setup.sh  start.sh  tts_piper_plus.py
docs/: PLAN.ja.md  PLAN.md  enhancement_plan_en.md  enhancement_plan_ja.md  review_en.md  review_ja.md
static/: index.html
